<resources>
    <string name="app_name">FCT</string>
    <string name="txt_add_FragmentCompany">Add Company</string>
    <string name="hint_company_name">Company name</string>
    <string name="hint_company_cif">CIF</string>
    <string name="hint_company_address">Address</string>
    <string name="hint_company_phone">Phone number</string>
    <string name="hint_company_url">Url Logo</string>
    <string name="hint_company_name_contact">Name contact</string>
    <string name="hint_company_email">Email</string>
    <string name="msgError_main_form">Invalid data</string>
    <string name="txt_addStudent_studentFragment">Add Student</string>
    <string name="hint_student_name">Name Student</string>
    <string name="hint_student_phoneStudent">Phone Number Student</string>
    <string name="hint_student_email">Email Student</string>
    <string name="hint_student_grade">Grade</string>
    <string name="hint_student_nameTutor">Name Tutor</string>
    <string name="hint_student_phoneTutor">Phone number Tutor</string>
    <string name="hint_student_workHours">Work Hours</string>
    <string name="mnu_txt_Company">List Company</string>
    <string name="mnu_txt_Student">List Student</string>
    <string name="main_open_navigation_drawer">Open navigation drawer</string>
    <string name="main_close_navigation_drawer">Close navigation drawer</string>
    <string name="lblSpinner_studentDetails">Select Company</string>
    <string name="txt_addVisit_visitFragment">No visits</string>
    <string name="mnu_txt_visit">List Visit</string>
    <string name="lblSpinner_Visit">Select Student</string>
    <string name="hint_visit_date">Date</string>
    <string name="hint_visit_timeStart">Select Time Start</string>
    <string name="hint_visit_timeEnd">Select Time End</string>
    <string name="hint_visit_comment">Comment</string>
    <string name="mnu_txt_nextVisit">List Next Visit</string>
    <string name="mnu_preference_activityMain">Settings</string>

    <string-array name="pref_listEntries">
        <item>List Companies</item>
        <item>List Students</item>
        <item>List Visits</item>
        <item>List Next Visits</item>
    </string-array>
    <string-array name="pref_listEntryValues">
        <item>companies</item>
        <item>students</item>
        <item>visits</item>
        <item>nextVisits</item>
    </string-array>
    <string name="pref_listDefaultValue" translatable="false">nextVisits</string>
    <string name="pref_listTitle">Home screen</string>
    <string name="pref_listKey">listPreference</string>
    <string name="lbl_companyFragment">List Companies</string>
    <string name="lbl_detailsCompanyFragment">Company Details</string>
    <string name="lbl_studentFragment">List Students</string>
    <string name="lbl_detailsStudentFragment">Student Details</string>
    <string name="lbl_visitsFragment">List Visits</string>
    <string name="lbl_detailsVisitsFragment">Visit Details</string>
    <string name="lbl_nextVisitsFragment">List Next Visits</string>
    <string name="msg_saveSucces">Save successfully</string>
    <string name="msg_saveError">Error, check fields</string>
    <string name="initialTxt_spinnerCompany">Select Company</string>
    <string name="msg_companySelect_spinner_Student">Error, Select Company</string>
    <string name="lbl_Company_studentAdapter">Company:</string>
</resources>
